# ai-remixmate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_PROMPT.md  AI_REMIXMATE_CODEX_FEATURE_SPEC.md  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Dockerfile  FURTHER_STUDIES.md  IMPROVEMENTS.md  LICENSE  PREREQUISITES.md  QUICK_START.txt  README.md  REMIX_QUALITY_INSIGHTS.md  SECURITY.md  SELF_IMPROVING_DJ_RESEARCH.md  SESSION_HANDOFF.md  app.py  check.sh  claude-code-improvements-2.md  claude-code-improvements-3.md  claude-code-improvements-5.md  claude-code-improvements-6.md  claude-code-improvements-7.md  claude-code-improvements.md  cleanup-and-commit.sh  config.yaml  docker-compose.yml  finalize-portfolio-commit.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_pipeline.sh  sitecustomize.py  start.sh
.github/: FUNDING.yml
.streamlit/: config.toml
ai_remixmate_feature_lab/: AGENTS.md  README.md
ai_remixmate_feature_lab/python/: pyproject.toml
ai_remixmate_feature_lab/python/ai_remixmate_features/: __init__.py  models.py
ai_remixmate_feature_lab/python/ai_remixmate_features/analysis/: __init__.py  beatgrid.py  bpm.py  chroma_key.py  energy_curve.py  mfcc_features.py  sections.py  stem_manifest.py  waveform_summary.py
ai_remixmate_feature_lab/python/ai_remixmate_features/intelligence/: __init__.py  automix.py  compatibility.py  remix_recipe.py  track_match.py  transition_plan.py
ai_remixmate_feature_lab/python/ai_remixmate_features/io/: __init__.py  json_export.py  track_manifest.py
ai_remixmate_feature_lab/python/ai_remixmate_features/neural/: __init__.py  core.py  feature_registry.py  online_learning.py  vectorizers.py
ai_remixmate_feature_lab/python/tests/: test_automix.py  test_bpm_compatibility.py  test_key_compatibility.py  test_neural_learning.py  test_remix_recipe.py  test_transition_plan.py
certs/: .gitignore  generate.sh
docs/: AI_RemixMate_Documentation.docx  COMPASS_ARTIFACT.md  COMPREHENSIVE_DOCUMENTATION.md  DJ_THEORY.md  DOCUMENTATION_INDEX.md  GUIDE.md  PORTFOLIO_INTEGRATION.md  QUICK_REFERENCE.md  README.md  TOKENIZATION_ROADMAP.md  portfolio-card.html  portfolio-card.jsx
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: __init__.py  analyze_features.py  batch_add_to_database.py  batch_demucs.py  batch_extract_lyrics.py  code_review.py  download.py  download_from_csv.py  download_song.py  purge_library.py  recommend_match.py  remix_from_match.py  remixmate_cli.py  smart_remix.py  song_database.py
tests/: __init__.py  conftest.py  e2e_test_suite.py  smoke_e2e.sh  test_audio_source.py  test_beat_tracker.py  test_behavioral.py  test_benchmarks.py  test_compatibility_score.py  test_core_modules.py  test_crate_digger.py  test_cue_export.py  test_dj_engine_guards.py  test_energy_profiler.py  test_mastering.py  (+8 more)
(+280 files in other folders)
